Finalizada a seção Home

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
 
+    <!-- home section START -->
     <header class="header">
         <a href="#" class="logo"><i class="fas fa-heartbeat"></i>Medcare.</a>
 
@@ -27,12 +28,33 @@
         </nav>
 
         <div id="menu-btn" class="fas fa-bars"></div>
-
-
-
-
     </header>
+    <!-- header section END -->
 
+    <!-- home section START -->
+    <section class="home" id="home">
+        <div class="image">
+            <img src="img/home-img.svg" alt="Imagem Inicial">
+        </div>
+        <div class="content">
+            <h3>stay safe, stay healthy</h3>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                 accusamus itaque possimus nisi excepturi ad.
+            </p>
+            <a href="#" class="btn">Contact us <span class="fas fa-chevron-right"></span></a>
+        </div>
+    </section>
+    <!-- home section END -->
+
+    <!--  section START -->
+    <!--  section END -->
+
+    <!--  section START -->
+    <!--  section END -->
+
+    <!--  section START -->
+    <!--  section END -->
 
     <script src="js/script.js"></script>
     
