Finalizada a seção de icones

--- a/index.html
+++ b/index.html
@@ -47,8 +47,35 @@
     </section>
     <!-- home section END -->
 
-    <!--  section START -->
-    <!--  section END -->
+    <!-- Icon section START -->
+        <section class="icons-container">
+
+            <div class="icons">
+                <i class="fas fa-user-md"></i>
+                <h3>140+</h3>
+                <p>Doctors at work</p>
+            </div>
+
+            <div class="icons">
+                <i class="fas fa-users"></i>
+                <h3>2350+</h3>
+                <p>Satisfied patients</p>
+            </div>
+
+            <div class="icons">
+                <i class="fas fa-procedures"></i>
+                <h3>500+</h3>
+                <p>Bed facility</p>
+            </div>
+
+            <div class="icons">
+                <i class="fas fa-hospital"></i>
+                <h3>80+</h3>
+                <p>Available Hospital</p>
+            </div>
+
+        </section>
+    <!-- Icon section END -->
 
     <!--  section START -->
     <!--  section END -->
