Finalizada a seção de Serviços

--- a/index.html
+++ b/index.html
@@ -77,8 +77,69 @@
         </section>
     <!-- Icon section END -->
 
-    <!--  section START -->
-    <!--  section END -->
+    <!-- Services section START -->
+        <section class="services" id="services">
+            <h1 class="heading"> our <span>services</span></h1>
+
+            <div class="box-container">
+
+                <div class="box">
+                    <i class="fas fa-notes-medical"></i>
+                    <h3>Free checkups</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, autem?
+                    </p>
+                    <a href="#" class="btn">learn more <span class="fas fa-chevron-right"></span></a>
+                </div>
+
+                <div class="box">
+                    <i class="fas fa-ambulance"></i>
+                    <h3>24/7 Ambulance</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, autem?
+                    </p>
+                    <a href="#" class="btn">learn more <span class="fas fa-chevron-right"></span></a>
+                </div>
+
+                <div class="box">
+                    <i class="fas fa-user-md"></i>
+                    <h3>Expert doctors</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, autem?
+                    </p>
+                    <a href="#" class="btn">learn more <span class="fas fa-chevron-right"></span></a>
+                </div>
+
+                <div class="box">
+                    <i class="fas fa-pills"></i>
+                    <h3>Medicines</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, autem?
+                    </p>
+                    <a href="#" class="btn">learn more <span class="fas fa-chevron-right"></span></a>
+                </div>
+
+                <div class="box">
+                    <i class="fas fa-procedures"></i>
+                    <h3>Bed facility</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, autem?
+                    </p>
+                    <a href="#" class="btn">learn more <span class="fas fa-chevron-right"></span></a>
+                </div>
+
+                <div class="box">
+                    <i class="fas fa-heartbeat"></i>
+                    <h3>Total Care</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, autem?
+                    </p>
+                    <a href="#" class="btn">learn more <span class="fas fa-chevron-right"></span></a>
+                </div>
+                
+            </div>
+        </section>
+    <!-- Services section END -->
 
     <!--  section START -->
     <!--  section END -->
