Finalizada a seção sobre

--- a/index.html
+++ b/index.html
@@ -141,8 +141,48 @@
         </section>
     <!-- Services section END -->
 
+    <!-- About section START -->
+        <section class="about" id="about">
+            <h1 class="heading"> <span>About</span> us </h1>
+
+            <div class="row">
+                <div class="image">
+                    <img src="img/about-img.svg" alt="About">
+                </div>
+
+                <div class="content">
+                    <h3>we take care of your healthy life</h3>
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                        Excepturi totam nisi eligendi magni perferendis quos inventore 
+                        minus eum vitae magnam pariatur, saepe, deserunt tenetur dolore 
+                        aspernatur velit, impedit atque obcaecati.
+                    </p>
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                        Ad consequatur ullam atque qui, itaque reiciendis excepturi 
+                        maxime? Ratione, in temporibus.
+                    </p>
+                    <a href="#" class="btn"> learn more <span class="fas fa-chevron-right"></span></a>
+                </div>
+            </div>
+        </section>
+    <!-- About section END -->
+
     <!--  section START -->
     <!--  section END -->
+
+    <!--  section START -->
+    <!--  section END -->
+
+    <!--  section START -->
+    <!--  section END -->
+
+
+    <!--  section START -->
+    <!--  section END -->
+
+
 
     <script src="js/script.js"></script>
     
