Finalizada a seção dos doutores

--- a/index.html
+++ b/index.html
@@ -169,8 +169,90 @@
         </section>
     <!-- About section END -->
 
-    <!--  section START -->
-    <!--  section END -->
+
+    <!-- doctors section START -->
+
+        <section class="doctors" id="doctors">
+
+            <h1 class="heading">our <span>Doctors</span></h1>
+
+            <div class="box-container">
+
+                <div class="box">
+                    <img src="img/doc-1.jpg" alt="">
+                    <h3>Cris Deo</h3>
+                    <span>expert doctor</span>
+                    <div class="share">
+                        <a href="#" class="fab fa-facebook"></a>
+                        <a href="#" class="fab fa-twitter"></a>
+                        <a href="#" class="fab fa-instagram"></a>
+                        <a href="#" class="fab fa-linkedin"></a>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <img src="img/doc-2.jpg" alt="">
+                    <h3>Jhon Smith</h3>
+                    <span>expert doctor</span>
+                    <div class="share">
+                        <a href="#" class="fab fa-facebook"></a>
+                        <a href="#" class="fab fa-twitter"></a>
+                        <a href="#" class="fab fa-instagram"></a>
+                        <a href="#" class="fab fa-linkedin"></a>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <img src="img/doc-3.jpg" alt="">
+                    <h3>Lary Jhonson</h3>
+                    <span>expert doctor</span>
+                    <div class="share">
+                        <a href="#" class="fab fa-facebook"></a>
+                        <a href="#" class="fab fa-twitter"></a>
+                        <a href="#" class="fab fa-instagram"></a>
+                        <a href="#" class="fab fa-linkedin"></a>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <img src="img/doc-4.jpg" alt="">
+                    <h3>Cris Auston</h3>
+                    <span>expert doctor</span>
+                    <div class="share">
+                        <a href="#" class="fab fa-facebook"></a>
+                        <a href="#" class="fab fa-twitter"></a>
+                        <a href="#" class="fab fa-instagram"></a>
+                        <a href="#" class="fab fa-linkedin"></a>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <img src="img/doc-5.jpg" alt="">
+                    <h3>Ben Clark</h3>
+                    <span>expert doctor</span>
+                    <div class="share">
+                        <a href="#" class="fab fa-facebook"></a>
+                        <a href="#" class="fab fa-twitter"></a>
+                        <a href="#" class="fab fa-instagram"></a>
+                        <a href="#" class="fab fa-linkedin"></a>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <img src="img/doc-6.jpg" alt="">
+                    <h3>Harry Solomons</h3>
+                    <span>expert doctor</span>
+                    <div class="share">
+                        <a href="#" class="fab fa-facebook"></a>
+                        <a href="#" class="fab fa-twitter"></a>
+                        <a href="#" class="fab fa-instagram"></a>
+                        <a href="#" class="fab fa-linkedin"></a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+    <!-- doctors section END -->
 
     <!--  section START -->
     <!--  section END -->
