Finalizada a seção de review

--- a/index.html
+++ b/index.html
@@ -277,8 +277,69 @@
 
     <!-- booking section END -->
 
-    <!--  section START -->
-    <!--  section END -->
+    <!-- review section START -->
+
+    <section class="review" id="review">
+        <h1 class="heading">Client's <span>review</span></h1>
+        <div class="box-container">
+
+            <div class="box">
+                <img src="img/pic-1.png" alt="">
+                <h3>John</h3>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <p class="text">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                    Maxime enim sint amet repellendus hic eligendi quaerat in 
+                    eveniet quibusdam eum deserunt, corrupti rerum expedita 
+                    illo consectetur, sapiente qui debitis. Vitae!
+                </p>
+            </div>
+
+            <div class="box">
+                <img src="img/pic-2.png" alt="">
+                <h3>Susan</h3>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <p class="text">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                    Maxime enim sint amet repellendus hic eligendi quaerat in 
+                    eveniet quibusdam eum deserunt, corrupti rerum expedita 
+                    illo consectetur, sapiente qui debitis. Vitae!
+                </p>
+            </div>
+
+            <div class="box">
+                <img src="img/pic-3.png" alt="">
+                <h3>Leonard</h3>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <p class="text">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                    Maxime enim sint amet repellendus hic eligendi quaerat in 
+                    eveniet quibusdam eum deserunt, corrupti rerum expedita 
+                    illo consectetur, sapiente qui debitis. Vitae!
+                </p>
+            </div>
+
+        </div>
+    </section>
+    <!-- review section END -->
 
 
     <!--  section START -->
