Finalizada a parte do blog da pagina

--- a/index.html
+++ b/index.html
@@ -278,7 +278,6 @@
     <!-- booking section END -->
 
     <!-- review section START -->
-
     <section class="review" id="review">
         <h1 class="heading">Client's <span>review</span></h1>
         <div class="box-container">
@@ -341,6 +340,67 @@
     </section>
     <!-- review section END -->
 
+
+    <!-- blogs section START -->
+    <section class="blogs" id="blogs">
+        <h1 class="heading">our <span>blogs</span></h1>
+
+        <div class="box-container">
+
+            <div class="box">
+                <div class="image">
+                    <img src="img/blog-1.jpg" alt="Foto do blog">
+                </div>
+
+                <div class="content">
+                    <div class="icon">
+                        <a href="#"><i class="fas fa-calendar"> 1st may, 2022</i></a>
+                        <a href="#"><i class="fas fa-user"></i>by admin</a>
+                    </div>
+                    <h3>blog title goes here</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae, beatae.</p>
+                    <a href="#" class="btn">learn more <span class="fas fa-chevron-right"></span></a>
+                </div>
+            </div>
+
+            <div class="box">
+                <div class="image">
+                    <img src="img/blog-2.jpg" alt="Foto do blog">
+                </div>
+
+                <div class="content">
+                    <div class="icon">
+                        <a href="#"><i class="fas fa-calendar"> 1st may, 2022</i></a>
+                        <a href="#"><i class="fas fa-user"></i>by admin</a>
+                    </div>
+                    <h3>blog title goes here</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae, beatae.</p>
+                    <a href="#" class="btn">learn more <span class="fas fa-chevron-right"></span></a>
+                </div>
+            </div>
+
+            <div class="box">
+                <div class="image">
+                    <img src="img/blog-3.jpg" alt="Foto do blog">
+                </div>
+
+                <div class="content">
+                    <div class="icon">
+                        <a href="#"><i class="fas fa-calendar"> 1st may, 2022</i></a>
+                        <a href="#"><i class="fas fa-user"></i>by admin</a>
+                    </div>
+                    <h3>blog title goes here</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae, beatae.</p>
+                    <a href="#" class="btn">learn more <span class="fas fa-chevron-right"></span></a>
+                </div>
+            </div>
+
+        </div>
+    </section>
+    <!-- blogs section END -->
+
+    <!--  section START -->
+    <!--  section END -->
 
     <!--  section START -->
     <!--  section END -->
