--- a/index.html
+++ b/index.html
@@ -399,8 +399,53 @@
     </section>
     <!-- blogs section END -->
 
-    <!--  section START -->
-    <!--  section END -->
+    <!-- footer section START -->
+    <section class="footer">
+        <div class="box-container">
+
+            <div class="box">
+                <h3>quick links</h3>
+                <a href="#home"><i class="fas fa-chevron-right"></i>home</a>
+                <a href="#services"><i class="fas fa-chevron-right"></i>services</a>
+                <a href="#about"><i class="fas fa-chevron-right"></i>about</a>
+                <a href="#doctors"><i class="fas fa-chevron-right"></i>doctors</a>
+                <a href="#book"><i class="fas fa-chevron-right"></i>book</a>
+                <a href="#review"><i class="fas fa-chevron-right"></i>review</a>
+                <a href="#blogs"><i class="fas fa-chevron-right"></i>blogs</a>
+            </div>
+
+            <div class="box">
+                <h3>our services</h3>
+                <a href="#"><i class="fas fa-chevron-right"></i>dental care</a>
+                <a href="#"><i class="fas fa-chevron-right"></i>message therapy</a>
+                <a href="#"><i class="fas fa-chevron-right"></i>cardiology</a>
+                <a href="#"><i class="fas fa-chevron-right"></i>diagnosis</a>
+                <a href="#"><i class="fas fa-chevron-right"></i>ambulance service</a>
+            </div>
+
+            <div class="box">
+                <h3>contact info</h3>
+                <a href="#"><i class="fas fa-phone"></i>+123-456-789</a>
+                <a href="#"><i class="fas fa-phone"></i>+111-222-333</a>
+                <a href="#"><i class="fas fa-envelope"></i>medcare@contact.com</a>
+                <a href="#"><i class="fas fa-envelope"></i>medcare_servic@contact.com</a>
+                <a href="#"><i class="fas fa-map-marker-alt"></i>Californi - EUA - 934834</a>
+            </div>
+
+            <div class="box">
+                <h3>follow us</h3>
+                <a href="#"><i class="fab fa-facebook"></i>facebook</a>
+                <a href="#"><i class="fab fa-twitter"></i>twitter</a>
+                <a href="#"><i class="fab fa-instagram"></i>instagram</a>
+                <a href="#"><i class="fab fa-linkedin"></i>linkedin</a>
+                <a href="#"><i class="fab fa-pinterest"></i>pinterest</a>
+            </div>
+
+        </div>
+
+        <div class="credit">createb by <span>mr. web design</span> | all rights reserved </div>
+    </section>
+    <!-- footer section END -->
 
     <!--  section START -->
     <!--  section END -->
